# tilevision-ai

./: .commit_msg.txt  .gitignore  README.md  main.py  pyproject.toml  requirements-gpu.txt  requirements.txt
admin_tool/: README.md  admin_theme.py  license_ledger.py  main.py  vendor_backup.py  web_date_picker.py
dev_tools/: check_gpu.py  create_dev_license.py  dev_private_key.pem  eval_recall_precision.py  generate_eval_manifest.py  generate_license.py  strip_ui_emojis.py
docs/: CROSS_PLATFORM.md  CUSTOMER_RELEASE.md  OPERATIONS.md  PHASE1_AUDIT.md  VENDOR_LICENSING.md
eval/: full_catalog.jsonl  my_queries.jsonl  queries.example.jsonl
model_weights/: README.md
packaging/: MAC_BETA_TEST.txt  MAC_INSTALL.txt  README.md  pyinstaller_common.py  tilevision.spec  tilevision_linux.spec  tilevision_mac.spec  tilevision_setup.iss
scripts/: build_mac.sh  build_windows.ps1  check_qt_deps.sh  download_dinov2_model.py  generate_update_manifest.py  install_mac_deps.sh  install_pytorch_cuda.ps1  install_pytorch_cuda.sh  macos_build_python.sh  package_mac_universal.sh  preflight_check.py  run_pre_release_tests.ps1  setup_mac_build_env.sh  smoke_test_windows.ps1  validate_ci_build.py  verify_frozen_mac_app.sh  verify_frozen_windows.ps1  verify_mac_native_libs.sh
src/: app.py  version.py
tests/: conftest.py  fake_ai.py  test_admin_theme.py  test_app_startup.py  test_candidate_filter.py  test_catalogue_master_service.py  test_color_descriptor.py  test_cross_platform_pages.py  test_crypto_store.py  test_dashboard_repositories.py  test_db_protection.py  test_gpu_info.py  (+33 more)
(+74 files in other folders)
